Fixed unresponsiveness of the navbar toggler on small screens   - The toggler failed to appear on small screens
Fixed typos of message and phone number in html.

Added a email logo and link to email on the header of index.html file

--- a/farmland-solutions/css/style.css
+++ b/farmland-solutions/css/style.css
@@ -303,16 +303,17 @@ button {
 .logo-text{
     width: 100%;
     float: left;
-    font-size: 60px;
+    font-size: 10px;
     color: #00ff00;
-    padding-top: 90px;
+    padding-top: 0px ;
+    padding-bottom: 10px;
 }
 .retailer_text {
     width: 100%;
     float: left;
     font-size: 40px;
     color: #00ff00;
-    padding-top: 90px;
+    padding-top: 0px;
 }
 .retailer_text_1 {
     width: 100%;
@@ -455,7 +456,7 @@ button {
     float: left;
     font-size: 46px;
     font-weight: bold;
-    color: #1c1c1c;
+    color: #00ff00;
     padding-top: 80px; 
 }
 .lorem_text {
@@ -734,7 +735,7 @@ button {
     border: 1px solid #888686;
     font-family: Raleway;
 }
-.massage-bt {
+.message-bt {
     color: #000000;
     width: 100%;
     height: 110px;
@@ -901,4 +902,125 @@ button {
 }
 .padding_top_0{
     padding-top: 60px !important;
+}
+
+
+/* new header implementation 
+previous code should be removed(carefully)
+*/
+
+/* header */
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+.logo{
+    max-width: 50px;
+
+}
+.nav{
+    position: fixed;
+    background-color: var(--clr-dark);
+    color: var(--clr-accent);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list{
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+
+}
+
+
+.nav__link{
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+.nav-toggle{
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 120;
+}
+
+.nav__link:hover{
+    color: var(--clr-light);
+}
+
+.nav-open .nav { 
+   transform: translateX(0);
+}
+
+.nav-open .nav-toggle{
+    position: fixed;
+
+}
+.nav-open .hamburger{
+    transform: rotate(.625turn);
+}
+.nav-open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+}
+.nav-open .hamburger::after{
+    opacity: 0;
+
+}
+
+
+
+
+.hamburger{
+    display: block;
+    position: relative;
+
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after{
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+
+}
+.hamburger::before{ top: 6px;}
+.hamburger::after{bottom: 6px;}
+
+
+
+
+
+.section__subtitle--work{
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
 }
